@@ -421,6 +421,10 @@
   NSMutableString   *makefile   = [NSMutableString string];
   NSString          *targetType = [target targetType];
 
+  [makefile appendString: @"#\n# This file generated by pbxbuild \n#\n\n"];
+
+  [makefile appendString: @"include $(GNUSTEP_MAKEFILES)/common.make\n\n"];
+
   [self generateStandardSectionsForTarget: target
 	inMakefile: makefile];      
 
@@ -454,7 +458,6 @@
     }
 
   // add includes
-  [makefile appendString: @"include $(GNUSTEP_MAKEFILES)/common.make\n\n"];
   if([@"library" isEqual: targetType])
     {
       [makefile appendString: @"include $(GNUSTEP_MAKEFILES)/library.make\n\n"];
